# pontje

./: .env.example  .gitignore  Caddyfile  Caddyfile.synology  Dockerfile.railway  README.md  docker-compose.synology.yml  docker-compose.yml
.github/workflows/: ci.yml
deploy/: railway.md  synology.md
scripts/: dev-lan.sh  smoke.sh
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: config.py  db.py  dump_openapi.py  loop.py  main.py  models.py  ratelimit.py  spa.py  timeutil.py
server/app/auth/: deps.py  device_link.py  oauth.py  sessions.py
server/app/routers/: auth.py  devices.py  links.py  share_sessions.py  shared_files.py  snippets.py  transfers.py
server/app/services/: categories.json  categorize.py  cleanup.py  enrichment.py  llm.py  secretbox.py  session_scope.py
server/app/ws/: handler.py  messages.py  presence.py
server/tests/: conftest.py  test_foundation.py  test_hardening.py  test_healthz.py  test_llm.py  test_phase1_auth.py  test_phase1_devices.py  test_phase1_ws.py  test_phase2_categorize.py  test_phase2_enrichment.py  test_phase2_links.py  test_phase2_snippets.py  test_phase2_sweeper.py  test_phase6_rtc.py  test_phase6_session_clips.py  test_phase6_sessions.py  test_shared_files.py  test_spa.py  test_transfers.py
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  sw.ts
web/src/api/: client.ts  openapi.json  schema.d.ts
web/src/components/: AuthGate.tsx  EmptyState.tsx  ErrorBoundary.tsx  FilterPill.tsx  InstallHint.tsx  PasteBox.tsx  (+4 more)
(+33 files in other folders)
